# SIMD-White-Box-Block-Cipher

./: .gitignore  README.md
CEJO-White-box-AES/: CMakeLists.txt
CEJO-White-box-AES/include/: wbaes.h
CEJO-White-box-AES/src/: wbaes.c
CEJO-White-box-AES/test/: main.c  tread_speed_test.c
Chen-SE-White-box-SM4/: CMakeLists.txt  README.md  ReadMe.txt  build.sh  p8.txt  run.sh
Chen-SE-White-box-SM4/include/: generateTable.h  sm4.h  sm4_new.h  wbsm4_se_cl.h  wbsm4_se_cl_avx2.h  wbsm4_se_cl_neon.h
Chen-SE-White-box-SM4/include/wbmatrix/: WBMatrix.h
Chen-SE-White-box-SM4/src/: SM4_equivalent.cpp  generateTable.c  sm4.c  sm4_new.c  wbsm4_se_cl.c  wbsm4_se_cl_avx2.c  wbsm4_se_cl_neon.c
Chen-SE-White-box-SM4/src/wbmatrix/: wbmatrix.c
Chen-SE-White-box-SM4/test/: avx2_test.c  neon_test.c  test.c
Gong-SE-White-box-SM4/: CMakeLists.txt  build.sh
Gong-SE-White-box-SM4/include/: sm4.h  sm4_lut.h  wbsm4_bw.h  wbsm4_se.h  wbsm4_se_avx2.h  wbsm4_se_la.h  wbsm4_se_local.h  wbsm4_se_neon.h  wbsm4_se_simd_mode_gcm.h  wbsm4_xl.h
Gong-SE-White-box-SM4/src/: sm4.c  sm4_lut.c  speed.c  wbsm4_bw.c  wbsm4_se.c  wbsm4_se_avx2.c  wbsm4_se_la.c  wbsm4_se_local.c  wbsm4_se_neon.c  wbsm4_se_simd_mode_gcm.c  wbsm4_xl.c
Gong-SE-White-box-SM4/src/wbmatrix/: random.c
Gong-SE-White-box-SM4/test/: sm4_lut_test.c  wbsm4_bw_test.c  wbsm4_se_avx2_test.c  wbsm4_se_la_test.c  wbsm4_se_neon_test.c  wbsm4_se_test.c  wbsm4_xl_test.c
Luo-SE-White-box-AES/: AES_Affine.txt  CMakeLists.txt
Luo-SE-White-box-AES/include/: wbaes_se_local.h  wbaes_se_lt.h  wbaes_se_lt_avx2.h  wbaes_se_lt_neon.h
Luo-SE-White-box-AES/include/wbmatrix/: structure.h
Luo-SE-White-box-AES/src/: aes.c  wbaes_se_lt.c  wbaes_se_lt_avx2.c  wbaes_se_lt_neon.c
Luo-SE-White-box-AES/src/wbmatrix/: wbmatrix.c
Luo-SE-White-box-AES/test/: wbaes_se_lt_avx2_test.c  wbaes_se_lt_neon_test.c  wbaes_se_lt_test.c
McMillion-SE-White-box-AES/: CMakeLists.txt
McMillion-SE-White-box-AES/include/: aes.h  wbaes_se_ms.h  wbaes_se_ms_avx2.h  wbaes_se_ms_neon.h
McMillion-SE-White-box-AES/src/: wbaes_se_local.c  wbaes_se_ms.c  wbaes_se_ms_avx2.c  wbaes_se_ms_neon.c
McMillion-SE-White-box-AES/src/wbmatrix/: wbmatrix.c
McMillion-SE-White-box-AES/test/: LL_test.c  aes_test.c  wbaes_se_ms_avx2_test.c  wbaes_se_ms_neon_test.c  wbaes_se_ms_test.c
Vandersmissen-SE-White-box-speck/: CMakeLists.txt  run.sh
Vandersmissen-SE-White-box-speck/include/: bit_packed_white_box_speck128_256.h  default_white_box_speck128_256.h  inlined_bit_packed_white_box_speck128_256.h  inlined_white_box_speck128_256.h  simd_white_box_speck128_256.h  simd_white_box_speck128_256_neon.h  sparse_matrix_white_box_speck128_256.h  wbspeck_se_avx2_128_256.h  wbspeck_se_neon_128_256.h
Vandersmissen-SE-White-box-speck/out_128_256/: bit_packed_white_box_speck.c  default_white_box_speck.c  inlined_bit_packed_white_box_speck.c  inlined_white_box_speck.c  inverse_input_external_encoding.c  inverse_output_external_encoding.c  simd_white_box_speck.c  sparse_matrix_white_box_speck.c
Vandersmissen-SE-White-box-speck/out_32_64/: bit_packed_white_box_speck.c  default_white_box_speck.c  inlined_bit_packed_white_box_speck.c  inlined_white_box_speck.c  inverse_input_external_encoding.c  inverse_output_external_encoding.c  simd_white_box_speck.c  sparse_matrix_white_box_speck.c  speck
Vandersmissen-SE-White-box-speck/out_64_128/: bit_packed_white_box_speck.c  default_white_box_speck.c  inlined_bit_packed_white_box_speck.c  inlined_white_box_speck.c  inverse_input_external_encoding.c  inverse_output_external_encoding.c  simd_white_box_speck.c  sparse_matrix_white_box_speck.c
Vandersmissen-SE-White-box-speck/src/: bit_packed_white_box_speck128_256.c  default_white_box_speck128_256.c  inlined_bit_packed_white_box_speck128_256.c  inlined_white_box_speck128_256.c  simd_white_box_speck128_256.c  sparse_matrix_white_box_speck128_256.c  wbspeck_se_avx2_128_256.c  wbspeck_se_neon_128_256.c
Vandersmissen-SE-White-box-speck/test/: avx2_test.c  bit_packed_test.c  default_test.c  inlined_bit_packed_test.c  inlined_test.c  neon_test.c  simd_test.c  sparse_matrix_test.c
Xiao-Lai-White-box-SM4/: CMakeLists.txt
Xiao-Lai-White-box-SM4/include/: speed.h
Xiao-Lai-White-box-SM4/test/: sm4_test.c
